# nexus-rs

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
nexus/: Cargo.toml  all.html  fn.addon_api.html  fn.on_unload.html  fn.ui.html  fn.with_ui.html  index.html  macro.event_consume!.html  macro.event_consume.html  macro.event_subscribe.html  macro.export.html  macro.font_receive.html  macro.keybind_handler.html  macro.render.html  macro.texture_receive!.html  macro.texture_receive.html  sidebar-items.js  struct.AddonApi.html  struct.DataLinkApi.html  struct.EventApi.html  struct.FontApi.html  struct.GameBindApi.html  struct.InputBindsApi.html  struct.LocalizationApi.html  struct.MinHookApi.html  struct.PathApi.html  struct.QuickAccessApi.html  struct.RendererApi.html  struct.Revertible.html  struct.SupportedFields.html  struct.TextureApi.html  struct.UiApi.html  struct.WndProcApi.html
nexus/__macro/: fn.with_ui.html
nexus/addon/: enum.UpdateProvider.html  index.html  sidebar-items.js  struct.AddonDefinition.html  struct.AddonFlags.html  struct.AddonVersion.html  struct.UpdateProviderIter.html  type.AddonLoad.html  type.AddonUnload.html  type.RawAddonLoad.html  type.RawAddonUnload.html
nexus/alert/: fn.alert_notify.html  fn.send_alert.html  index.html  sidebar-items.js  type.RawAlertNotify.html
nexus/data_link/: constant.MUMBLE_LINK.html  constant.NEXUS_LINK.html  fn.get_mumble_link.html  fn.get_mumble_link_ptr.html  fn.get_nexus_link.html  fn.get_resource.html  fn.read_mumble_link.html  fn.read_nexus_link.html  fn.read_resource.html  fn.share_resource.html  index.html  sidebar-items.js  struct.MumbleLink.html  struct.NexusLink.html  type.RawDataGetResource.html  type.RawDataShareResource.html
nexus/event/: constant.ADDON_LOADED.html  constant.ADDON_UNLOADED.html  constant.MUMBLE_IDENTITY_UPDATED.html  constant.VOLATILE_ADDON_DISABLED.html  constant.WINDOW_RESIZED.html  fn.event_raise.html  fn.event_raise_notification.html  fn.event_raise_notification_targeted.html  fn.event_raise_targeted.html  fn.event_subscribe_typed.html  fn.event_subscribe_unknown.html  fn.event_unsubscribe.html  index.html  macro.event_consume.html  macro.event_subscribe!.html  macro.event_subscribe.html  sidebar-items.js  struct.Event.html  struct.MumbleIdentityUpdate.html  type.RawEventConsume.html  type.RawEventConsumeUnknown.html  type.RawEventRaise.html  type.RawEventRaiseNotification.html  type.RawEventRaiseNotificationTargeted.html  type.RawEventRaiseTargeted.html  type.RawEventSubscribe.html
nexus/font/: fn.add_font_from_file.html  fn.add_font_from_memory.html  fn.add_font_from_resource.html  fn.get_font.html  fn.release_font.html  fn.resize_font.html  index.html  macro.font_receive!.html  macro.font_receive.html  sidebar-items.js  type.RawFontAddFromFile.html  type.RawFontAddFromMemory.html  type.RawFontAddFromResource.html  type.RawFontGet.html  type.RawFontReceive.html  type.RawFontRelease.html  type.RawFontResize.html
nexus/gamebind/: enum.GameBind.html  fn.invoke_gamebind_async.html  fn.is_gamebind_bound.html  fn.press_gamebind.html  fn.press_gamebind_async.html  fn.release_gamebind.html  fn.release_gamebind_async.html  index.html  sidebar-items.js  struct.GameBindIter.html  type.RawGamebindInvokeAsync.html  type.RawGamebindIsBound.html  type.RawGamebindPress.html  type.RawGamebindPressAsync.html  type.RawGamebindRelease.html  type.RawGamebindReleaseAsync.html
nexus/globals/: fn.addon_api.html  fn.on_unload.html  fn.ui.html
nexus/gui/: constant.IMGUI_VERSION.html  enum.RenderType.html  fn.deregister_close_on_escape.html  fn.register_close_on_escape.html  fn.register_render.html  fn.unregister_render.html  index.html  macro.render.html  sidebar-items.js  struct.RenderTypeIter.html  type.ImguiFree.html  type.ImguiMalloc.html  type.RawGuiRender.html  (+4 more)
nexus_codegen/: Cargo.toml  all.html  index.html  macro.export.html
nexus_example_addon/: Cargo.toml  all.html  index.html
(+24963 files in other folders)
