[package]
name = "nexus"
version = "0.3.0"
edition = "2021"
authors = ["Zerthox"]
description = "Rust bindings for Raidcore Nexus addons"
repository = "https://github.com/zerthox/nexus-rs"
rust-version = "1.71.0"

[dependencies]
bitflags = "2.4.2"
detour = { version = "0.8.1", default-features = false, optional = true }
gw2_mumble = { git = "https://github.com/zerthox/gw2-mumble-rs", tag = "0.2.1", optional = true }
imgui = { package = "arcdps-imgui", version = "0.8.0", features = ["tables-api"] }
log = { version = "0.4.21", features = ["std"], optional = true }
nexus_codegen = { path = "../nexus_codegen" }
num_enum = "0.7.2"
paste = "1.0.14"
serde = { version = "1.0.197", features = ["derive"], optional = true }
strum = { version = "0.26.2", features = ["derive"], optional = true }

[dependencies.windows]
version = "0.56.0"
features = [
    "System",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
]

[features]
arc = []
arcdps = ["arc"]
evtc = ["arc"]
extras = []
mumble = ["dep:gw2_mumble"]
mumble_json = ["mumble", "gw2_mumble/json"]
hook = ["dep:detour"]
serde = ["dep:serde", "bitflags/serde", "gw2_mumble/serde"]
