[package]
name = "nexus"
version = "0.10.2"
edition = "2021"
authors = ["Zerthox"]
description = "Rust bindings for Raidcore Nexus addons"
repository = "https://github.com/zerthox/nexus-rs"
rust-version = "1.81.0"

[dependencies]
bitfields = { version = "1.0.0", optional = true }
bitflags = "2.4.2"
gw2_mumble = { git = "https://github.com/zerthox/gw2-mumble-rs", tag = "0.3.0", optional = true }
log = { version = "0.4.21", features = ["std"], optional = true }
env_filter = { version = "0.1.2", optional = true }
nexus_codegen = { path = "../nexus_codegen" }
num_enum = "0.7.2"
paste = "1.0.14"
retour = { version = "0.3.1", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"], optional = true }

[dependencies.arcdps]
git = "https://github.com/zerthox/arcdps-rs"
tag = "0.20.0"
default-features = false
features = ["unwind"]
optional = true

[dependencies.imgui]
package = "arcdps-imgui"
version = "0.8.0"
features = ["tables-api"]

[dependencies.windows]
version = "0.62.2"
features = ["System", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11"]

[features]
default = ["panic", "panic_trace", "panic_msgbox"]
arc = ["dep:arcdps"]
arcdps = ["arc"]
evtc = ["arc"]
extras = ["dep:arcdps", "arcdps/extras"]
hook = ["dep:retour"]
log = ["dep:log"]
log_filter = ["log", "dep:env_filter", "nexus_codegen/log_filter"]
mumble = ["dep:gw2_mumble"]
mumble_json = ["mumble", "gw2_mumble/json"]
panic = []
panic_trace = ["panic"]
panic_msgbox = ["panic", "windows/Win32_UI_WindowsAndMessaging"]
rtapi = ["dep:bitfields"]
serde = ["dep:serde", "bitflags/serde", "gw2_mumble/serde"]
strum = ["dep:strum"]
