[package]
name = "nexus_codegen"
version = "0.3.0"
edition = "2021"
authors = ["Zerthox"]
description = "Helper macro to generate code for Raidcore Nexus addons"
repository = "https://github.com/zerthox/nexus-rs"
rust-version = "1.71.0"

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
paste = "1.0.12"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.14", features = ["full"] }
env_filter = { version = "0.1.2", optional = true }

[features]
log_filter = ["dep:env_filter"]
